[package]
name = "backlight"
version = "0.2.0"
authors = ["Jerko Steiner <jerko.steiner@gmail.com>", "Fabian Neumann <mail@fabianneumann.de>"]

description = "Rust library for controlling backlight on linux systems via the `/sys/class/backlight` interface."

documentation = "https://github.com/jeremija/backlight.git"
homepage = "https://github.com/jeremija/backlight.git"
repository = "https://github.com/jeremija/backlight.git"
readme = "README.md"

keywords = ["linux", "backlight", "brightness"]
license = "MIT"

[dependencies]
structopt = { version = "0.2", default-features = false }
